--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url = jdbc:mysql://localhost:3306/mydb?useSSL=false&serverTimezone=UTC
 spring.datasource.url = jdbc:mysql://20.238.97.13:3306/mydb
 spring.datasource.username = root
-spring.datasource.password = rootroot
+spring.datasource.password = mypassword
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 server.port=80
