--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password = mypassword
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 server.port=80
+#10 minutes wait time:
+spring.datasource.hikari.maxLifeTime = 600000 
